--- a/www/css/stili.css
+++ b/www/css/stili.css
@@ -84,6 +84,15 @@ margin:12px;
 
 /* =============================================================================================================================================== */
 /* MENU */
+
+.paneli{
+	background: -webkit-linear-gradient(#9a4d61, #4b3a48);
+	background: -o-linear-gradient(#9a4d61, #4b3a48);
+	background: -moz-linear-gradient(#9a4d61, #4b3a48);
+	background: linear-gradient(#9a4d61, #4b3a48);	
+	border-right:solid 1px rgba(255,255,255,0.5);
+}
+
 .titulli{
     background-color:rgba(255,255,255,0.1);
     font-size:12px;
